# policy_training

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/inference/: insert_rope.json  pack_sloth.json  pusht.json
configs/training/: act_insert_rope.json  act_pack_sloth.json  act_pusht.json  dp_insert_rope.json  dp_pack_sloth.json  dp_pusht.json  svla_insert_rope.json  svla_pack_sloth.json  svla_pusht.json
inference/: inference_wrapper.py  policy_lerobot.py  policy_openpi.py  utils.py
scripts/: train_act.sh  train_dp.sh  train_pi0.sh  train_svla.sh
